--- a/Pre_Process.ipynb
+++ b/Pre_Process.ipynb
@@ -37,11 +37,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 14,
       "metadata": {
         "id": "WFVoMrOpQO4x"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'seaborn'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[0;32mIn[14], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m##import pandas as pd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mseaborn\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39msns\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mshutil\u001b[39;00m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'seaborn'"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -971,27 +983,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [],
       "source": [
-        "def flip_rotate(image)\n",
+        "import torchvision.transforms as transforms\n",
+        "\n",
+        "def flip_horizontal(image):\n",
         "    flip = transforms.RandomHorizontalFlip(p=1)\n",
         "    flipped_image = flip(image)\n",
+        "\n",
+        "    return flipped_image\n",
+        "\n",
+        "def flip_vertical(image):\n",
+        "    flip = transforms.RandomVerticalFlip(p=1)\n",
+        "    flipped_image = flip(image)\n",
+        "\n",
+        "    return flipped_image\n",
+        "\n",
+        "def rotate_ninety(image):\n",
         "    rotate = transforms.RandomRotation(degrees=(90, 90))\n",
-        "    flipped_rotated_image = rotate(flipped_image)\n",
+        "    rotated_image = rotate(image)\n",
         "\n",
-        "    return flipped_rotated_image\n",
+        "    return rotated_image\n",
+        "\n",
+        "def rotate_one_eighty(image):\n",
+        "    rotate = transforms.RandomRotation(degrees=(180, 180))\n",
+        "    rotated_image = rotate(image)\n",
+        "\n",
+        "    return rotated_image\n",
+        "\n",
+        "def rotate_two_seventy(image):\n",
+        "    rotate = transforms.RandomRotation(degrees=(270, 270))\n",
+        "    rotated_image = rotate(image)\n",
+        "\n",
+        "    return rotated_image\n",
         "\n",
         "\n",
-        "def gaussian_blur(image)\n",
-        "    add_blur = transforms.functional.GaussianBlur(kernel_size=(4, 4), sigma=(0.1, 0.2))\n",
+        "def gaussian_blur(image):\n",
+        "    add_blur = transforms.GaussianBlur(kernel_size=(5, 5), sigma=(0.1, 0.75))\n",
         "    blurred_image = add_blur(image)\n",
         "    \n",
         "    return blurred_image\n",
         "\n",
         "\n",
-        "def color_jitter(image)\n",
+        "def color_jitter(image):\n",
         "    jitter = transforms.ColorJitter(brightness=(0.5,1.5),contrast=(1),saturation=(0.5,1.5),hue=(-0.1,0.1))\n",
         "    ## jitter = transforms.ColorJitter(brightness=1.0, contrast=0.5, saturation=1, hue=0.1)\n",
         "    jittered_image = jitter(image)\n",
@@ -999,7 +1035,7 @@
         "    return jittered_image\n",
         "\n",
         "\n",
-        "def invert_color(image)\n",
+        "def invert_color(image):\n",
         "    invert = transforms.RandomInvert(p=1)\n",
         "    inverted_image = invert(image)\n",
         "\n",
@@ -1019,7 +1055,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.10"
     }
   },
   "nbformat": 4,
